# AniGamerDownloader

./: .gitignore  README.md  aniGamer.bat  cli.py  requirements-venv.txt
.github/workflows/: ci.yml  release.yml
app/: __init__.py  daemon.py  state.py
app/web/: __init__.py  server.py
core/: __init__.py  config.py  cookies.py  danmu.py  db.py  engine.py  logging.py  pyproject.toml  types.py
docs/: DESKTOP_BUILD.md  DOCKER.md  SETUP_GUIDE.md
scripts/: build_desktop.bat  migrate_filenames.py
shells/: __init__.py  desktop.py  requirements-desktop.txt
shells/docker/: .dockerignore  Dockerfile  __init__.py  docker-compose.yml  entrypoint.py
web/static/css/: app.css
web/static/js/: app.js
web/templates/: index.html
